--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Listing Express | Documentation</title>
+    <title>ListingExpress© | Documentation</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <link rel="icon" type="image/x-icon" href="images/icon.png">
     <!-- Bootstrap 3.3.6 -->
@@ -33,9 +33,9 @@
                 </a>
                 <a href="index.html" class="logo">
                     <!-- mini logo for sidebar mini 50x50 pixels -->
-                    <span class="logo-mini"><b>L</b>E</span>
+                    <span class="logo-mini"><b>LE©</b></span>
                     <!-- logo for regular state and mobile devices -->
-                    <span class="logo-lg">Listing Express</span>
+                    <span class="logo-lg">ListingExpress©</span>
                 </a>
                 <!-- Navbar Right Menu -->
                 <ul class="nav navbar-nav hidden-xs">
@@ -45,7 +45,7 @@
                     <li><a href="#">Events</a></li>
                     <li><a href="#">Blog</a></li>
                 </ul>
-                <div class="navbar-custom-menu hidden-xs">
+                <div class="navbar-custom-menu hidden-xs hidden-sm">
                     <form class="navbar-form navbar-left" role="search">
                         <div class="form-group">
                             <input type="text" class="form-control" id="navbar-search-input" placeholder="Search">
@@ -91,9 +91,9 @@
                     </li>
                     <li><a href="#advice">1-m search</a></li>
                     <li><a href="#layout">Buyer-seller messaging</a></li>
-                    <li><a href="#adminlte-options">db API</a></li>
+                    <li><a href="#adminlte-options">dbAPI</a></li>
                     <li><a href="#faq">FAQ</a></li>
-                    <li><a href="#license">License</a></li>
+                    <li><a href="page/license.html">License</a></li>
                 </ul>
             </div>
             <!-- /.sidebar -->
@@ -112,7 +112,10 @@
                         <section id="introduction">
                             <h2 class="page-header"><a href="#introduction">Introduction</a></h2>
                             <p class="lead">
-                                A community side-project with the aim of providing a single, consistent platform for users to list news/ads and communicate each other across multiple domains including goods, jobs, renting, etc. Cutting-edge technologies are deployed to bring the best convenient and comfortable feelings to users while many components can be utilized for many other projects. Timeline: started in Spring 2016; expect 1st release in Spring 2019 Team: currently 3 members
+                                A community side-project with the aim of providing a single, consistent platform for users to list news/ads and communicate each other across multiple domains including goods, jobs, renting, etc. Cutting-edge technologies are deployed to bring the best convenient and comfortable feelings to users while many components can be utilized for many other projects.
+                            </p>
+                            <p class="lead">
+                                Timeline: started in Spring 2016; expect 1st release in Spring 2019 Team: currently 3 members
                             </p>
                         </section>
                         <!-- /#introduction -->
@@ -145,11 +148,10 @@
                         </section>
                     </div>
                 </div>
-                <div class="col-sm-2 hidden-xs">
+                <div class="col-sm-2 hidden-xs hidden-sm">
                     <div class="sidebar custom-menu-scroll" id="scrollspy">
-                        <!-- sidebar menu: : style can be found in sidebar.less -->
                         <ul class="nav sidebar-menu">
-                            <li class="h1 active custom-title"><a href="#lx-document">Listing Express Documentation</a></li>
+                            <li class="h1 active custom-title"><a href="#lx-document">ListingExpress© Documentation</a></li>
                             <li><a href="#introduction">Introduction</a></li>
                             <li><a href="#technologies">Technologies</a></li>
                             <li><a href="#ready">Ready components</a></li>
