newline before timeline #5

--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
                                 A community side-project with the aim of providing a single, consistent platform for users to list news/ads and communicate each other across multiple domains including goods, jobs, renting, etc. Cutting-edge technologies are deployed to bring the best convenient and comfortable feelings to users while many components can be utilized for many other projects.
                             </p>
                             <p class="lead">
-                                Timeline: started in Spring 2016; expect 1st release in Spring 2019 Team: currently 3 members
+                                Timeline: started in Spring 2016; expect 1st release in Spring 2019
+                            </p>
+                            <p class="lead">
+                                Team: currently 3 members
                             </p>
                         </section>
                         <!-- /#introduction -->
@@ -175,7 +178,6 @@
     <script src="js/jquery-2.2.3.min.js"></script>
     <!-- Bootstrap 3.3.6 -->
     <script src="css/bootstrap/js/bootstrap.min.js"></script>
-    
     <script src="js/app.js"></script>
     <script src="js/jquery.slimscroll.min.js"></script>
     <script src="js/docs.js"></script>
