update size content, scrollbar menu, licene ...

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </a>
                 <!-- Navbar Right Menu -->
                 <ul class="nav navbar-nav hidden-xs">
-                    <li><a href="#">Feature</a></li>
+                    <li><a href="#">Features</a></li>
                     <li><a href="#">Docs</a></li>
                     <li><a href="#">Resources</a></li>
                     <li><a href="#">Events</a></li>
@@ -101,7 +101,7 @@
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
             <div class="row">
-                <div class="col-sm-10">
+                <div class="col-sm-9">
                     <div class="content-header" id="lx-document">
                         <h1 class="h1-header">
                                 Listing Express Documentation
@@ -113,11 +113,9 @@
                             <h2 class="page-header"><a href="#introduction">Introduction</a></h2>
                             <p class="lead">
                                 A community side-project with the aim of providing a single, consistent platform for users to list news/ads and communicate each other across multiple domains including goods, jobs, renting, etc. Cutting-edge technologies are deployed to bring the best convenient and comfortable feelings to users while many components can be utilized for many other projects.
-                            </p>
-                            <p class="lead">
+                            <br>
                                 Timeline: started in Spring 2016; expect 1st release in Spring 2019
-                            </p>
-                            <p class="lead">
+                            <br>
                                 Team: currently 3 members
                             </p>
                         </section>
@@ -151,7 +149,7 @@
                         </section>
                     </div>
                 </div>
-                <div class="col-sm-2 hidden-xs hidden-sm">
+                <div class="col-sm-3 hidden-xs hidden-sm">
                     <div class="sidebar custom-menu-scroll" id="scrollspy">
                         <ul class="nav sidebar-menu">
                             <li class="h1 active custom-title"><a href="#lx-document">ListingExpress© Documentation</a></li>
