--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                         </a>
                         <ul class="nav treeview-menu">
                             <li><a href="page/dbAPI/how-to-run.html">How To Run</a></li>
+                            <li><a href="page/dbAPI/usage.html">Usage</a></li>
                             <li><a href="page/dbAPI/sqlparser-module.html">SQLParser module</a></li>
                             <li><a href="page/dbAPI/sqlmapper-module.html">SQLMapper module</a></li>
                             <li><a href="page/dbAPI/sqlconverter-module.html">SQLConverter module</a></li>
