Update How to use for dbAPI fixed title

--- a/index.html
+++ b/index.html
@@ -102,11 +102,14 @@
                         <ul class="nav treeview-menu">
                             <li><a href="page/dbAPI/how-to-run.html">How To Run</a></li>
                             <li><a href="page/dbAPI/usage.html">Usage</a></li>
-                            <li><a href="page/dbAPI/sqlparser-module.html">SQLParser module</a></li>
-                            <li><a href="page/dbAPI/sqlmapper-module.html">SQLMapper module</a></li>
-                            <li><a href="page/dbAPI/sqlconverter-module.html">SQLConverter module</a></li>
-                            <li><a href="page/dbAPI/dbconnect-module.html">dbConnect module</a></li>
-                            <li><a href="page/dbAPI/rediswrapper-module.html">RedisWrapper module</a></li>
+                            <li><a href="page/dbAPI/create.html">Create</a></li>
+                            <li><a href="page/dbAPI/alter.html">Alter</a></li>
+                            <li><a href="page/dbAPI/index.html">Index</a></li>
+                            <li><a href="page/dbAPI/insert.html">Insert</a></li>
+                            <li><a href="page/dbAPI/update.html">Update</a></li>
+                            <li><a href="page/dbAPI/delete.html">Delete</a></li>
+                            <li><a href="page/dbAPI/select.html">Select</a></li>
+                            <li><a href="page/dbAPI/rediseasy-module.html">RedisEasy module</a></li>
                         </ul>
                     </li>
                     <li><a href="#faq">FAQ</a></li>
