Change header and footer. Update license page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li><a href="#">Features</a></li>
                     <li><a href="#">Docs</a></li>
                     <li><a href="#">Resources</a></li>
-                    <li><a href="#">Events</a></li>
+                    <li><a href="#">Team</a></li>
                     <li><a href="#">Blog</a></li>
                 </ul>
                 <div class="navbar-custom-menu hidden-xs hidden-sm">
@@ -152,8 +152,9 @@
                         <section id="ready">
                             <h2 class="page-header"><a href="#ready">Ready components</a></h2>
                             <ul>
+                                <li><b><u>vnSegmenter:</u></b> The first JavaScript-based module that implements the fastest algorithm and utilizes the semantic-correlation scores from Google <code>word2vec</code> for word segmentation in Vietnamese. The aim is accurately identifying multisyllabic words as fast as possible since Vietnamese multisyllabic words are usually consist of a series of monosyllabic words separated by spaces.</li>
                                 <li><b><u>Multilingual controller:</u></b> A JS-based module that supports product development and deployment in multiple languages without limited to the proficiency of developer languages. Texts/messages/labels/etc. are collected and translated to be consistent across the entire project with automatic functions such as auto-scan, auto-translate, and auto-compile.</li>
-                                <li><b><u>vnSegmenter:</u></b> The first JavaScript-based module that implements the fastest algorithm and utilizes the meaning-correlation scores from <code>Google ‘word2vec’</code> for word segmentation in Vietnamese. The aim is identifying more accurate multisyllabic words since a Vietnamese word may consist of a series of monosyllabic words separated by spaces.</li>
+                                <li><b><u>dbAPI:</u></b> A set of unique APIs for every corresponding CRUD operations in database transactions along with the capacity to use SQL queries to execute transactions across DBMSs such as MySQL, SQLite, CouchDB, Neo4j, and Redis.</li>
                             </ul>
                         </section>
                         <!-- ============================================================= -->
@@ -162,7 +163,8 @@
                             <ul>
                                 <li><b><u>1-m search:</u></b> A client-side module that provide an engine to search keywords from various other websites and combine results into a display framework. Guest mode allows running directly from the user browser without any further settings.</li>
                                 <li><b><u>Buyer-seller messaging:</u></b> A JS-based module to allow the communications between buyers and sellers through encrypted alias emails to increase security. The module allows users to communicate freely before reveal the true information for a deal.</li>
-                                <li><b><u>dbAPI:</u></b> A set of unique APIs for every corresponding <code>CRUD</code> operations in database transactions. APIs are configurable and work across <code>DBMSs</code> such as <code>MySQL</code> and <code>CouchDB</code>.</li>
+                                <li><b><u>Item pricing model:</u></b> Pricing would be a difficult task for community users in listing websites. While they can easily describe their items and choose some of attributes based on listed categories, having a reasonable price may take some work. Given the item's description, condition, brand-name... a built-in ML model is helpful for both sellers/buyers to negotiate (Stack: Gensim, TensorFlow).</li>
+                                <li><b><u>Agile Testing:</u></b> As a main part in DevOps or Agile software development life cycle, to facilitate the automatic process in testing and deploying web-apps, we put together one among many contemporary processes that takes a step further to quality assurance of developing cloud-based apps (Stack: GitLab CI, Selenium, Cucumber, Docker, Google cloud SDK).</li>
                             </ul>
                         </section>
                         <br>
@@ -190,7 +192,7 @@
         <!-- /.content-wrapper -->
         <footer class="main-footer">
             <div class="pull-right">
-                Copyright &copy; 2017. All rights reserved.
+                Last updated on March 2018.
             </div>
         </footer>
     </div>
