--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                             <li><a href="page/multilingual-controller/translator-module.html">Translator Module</a></li>
                             <li><a href="page/multilingual-controller/compiler-module.html">Compiler Module</a></li>
                             <li><a href="page/multilingual-controller/admin-module.html">Admin Module</a></li>
+                            <li><a href="https://itdev.expresspedia.org/mc/demo">Demo</a></li>
                         </ul>
                     </li>
                     <li class="treeview">
