--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                             <p class="lead">
                                 A community side-project with the aim of providing a single, consistent platform for users to list news/ads and communicate each other across multiple domains including goods, jobs, renting, etc. Cutting-edge technologies are deployed to bring the best convenient and comfortable feelings to users while many components can be utilized for many other projects.
                             <br>
-                                Timeline: started in Spring 2016; expect 1st release in Spring 2019
+                                Timeline: expect 1st release in Fall 2021
                             <br>
-                                Team: currently 3 members
+                                Team: currently 4 members
                             </p>
                         </section>
                         <!-- /#introduction -->
@@ -143,7 +143,7 @@
                         <section id="technologies">
                             <h2 class="page-header"><a href="#technologies">Technologies</a></h2>
                             <ul>
-                                <li><b>Programming:</b> <code>TypeScript, Meteor, Angular 2, Semantic UI, D3.js</code></li>
+                                <li><b>Programming:</b> <code>TypeScript, MeteorJS, Angular, SemanticUI, D3.js</code></li>
                                 <li><b>Database:</b> <code>Couchbase/CouchDB, MySQL</code></li>
                                 <li><b>Platform:</b> <code>Google Cloud Platform</code></li>
                                 <li><b>Others:</b> <code>Apache ASF, NPM, GitLab, Slack, etc.</code></li>
@@ -165,7 +165,7 @@
                                 <li><b><u>1-m search:</u></b> A client-side module that provide an engine to search keywords from various other websites and combine results into a display framework. Guest mode allows running directly from the user browser without any further settings.</li>
                                 <li><b><u>Buyer-seller messaging:</u></b> A JS-based module to allow the communications between buyers and sellers through encrypted alias emails to increase security. The module allows users to communicate freely before reveal the true information for a deal.</li>
                                 <li><b><u>Item pricing model:</u></b> Pricing would be a difficult task for community users in listing websites. While they can easily describe their items and choose some of attributes based on listed categories, having a reasonable price may take some work. Given the item's description, condition, brand-name... a built-in ML model is helpful for both sellers/buyers to negotiate (Stack: Gensim, TensorFlow).</li>
-                                <li><b><u>Agile Testing:</u></b> As a main part in DevOps or Agile software development life cycle, to facilitate the automatic process in testing and deploying web-apps, we put together one among many contemporary processes that takes a step further to quality assurance of developing cloud-based apps (Stack: GitLab CI, Selenium, Cucumber, Docker, Google cloud SDK).</li>
+                                <li><b><u>CICD:</u></b> As a main part in DevOps or Agile software development life cycle, to facilitate the automatic process in testing and deploying web-apps, we put together one among many contemporary processes that takes a step further to quality assurance of developing cloud-based apps (Stack: GitLab CI, Docker, Google cloud SDK).</li>
                             </ul>
                         </section>
                         <br>
