Update RedisEasy tutorial

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <ul class="nav treeview-menu">
                             <li><a href="page/rediseasy/how-to-run.html">How To Run</a></li>
                             <li><a href="page/rediseasy/usage.html">Usage</a></li>
-                            <li><a href="page/rediseasy/rediseasy.html">Examples</a></li>
+                            <li><a href="page/rediseasy/example.html">Examples</a></li>
                         </ul>
                     </li>
                     <li><a href="#faq">FAQ</a></li>
